--- a/LibraryApp/Views/Shared/LayoutNew.cshtml
+++ b/LibraryApp/Views/Shared/LayoutNew.cshtml
@@ -58,7 +58,7 @@
             {
                 <div class="sidebar-heading border-bottom bg-light">Zarządzanie</div>
                 <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Book" asp-action="Index">Książki</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-route-searchString="null" asp-route-sortOrder="null" asp-controller="Book" asp-action="Index">Książki</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Author" asp-action="Index">Autorzy</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Copy" asp-action="Index">Ezgemplarze</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Loan" asp-action="Index">Wypożyczenia</a>
