--- a/LibraryApp/Views/Shared/Templates/_BackButton.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_BackButton.cshtml
@@ -1,1 +1,2 @@
-﻿<a class="btn btn-primary position-absolute" href="javascript:history.go(-1)"><i class="bi bi-arrow-left"></i></a>
+﻿
+<a class="btn btn-primary position-absolute" href="@Model"><i class="bi bi-arrow-left"></i></a>
