--- a/LibraryApp/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/LibraryApp/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Zmień hasło";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
@@ -11,22 +11,22 @@
     <div class="col-md-6">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
+            <div class="mb-3">
+                <label asp-for="Input.OldPassword" class="form-label">Stare hasło</label>
                 <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" />
-                <label asp-for="Input.OldPassword" class="form-label"></label>
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="mb-3">
+                <label asp-for="Input.NewPassword" class="form-label">Nowe hasło</label>
                 <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.NewPassword" class="form-label"></label>
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="mb-3">
+                <label asp-for="Input.ConfirmPassword" class="form-label">Potwierdź hasło</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary mb-4">Zapisz</button>
         </form>
     </div>
 </div>
