--- a/LibraryApp/Views/Shared/Templates/_BookList.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_BookList.cshtml
@@ -1,10 +1,37 @@
-﻿
-@foreach (var Book in @Model.BookList)
-{
-    <li class="list-group-item d-flex justify-content-between">
-        <div class="align-self-center">
-            <a class="text-decoration-none text-dark" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@Book.Title</strong></a><br>
-            <small class="small">@Book.Author.Name @Book.Author.LastName</small>
-        </div>
-    </li>
-}
+﻿<div class="bg-white rounded shadow ps-3 pe-3 pt-1 pb-1 mt-3">
+    <table class="table table-hover table-responsive">
+        <thead>
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Tytuł&nbsp;&nbsp;
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleAsc"})"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleDesc"})"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col">Zdjęcie</th>
+                <th scope="col">Autor</th>
+                <th scope="col">Rok wydania&nbsp;&nbsp;
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearAsc"})"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearDesc"})"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col">Datadodania &nbsp;&nbsp;
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateAsc"})"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateDesc"})"><i class="bi bi-arrow-down"></i></a>
+                </th>  
+            </tr>
+        </thead>
+
+        <tbody>
+            @foreach (var Book in @Model.BookList)
+            {
+                <tr>
+                    <th scope="row">@Book.Id</th>
+                    <td class="col-3"><a class="text-decoration-none text-dark" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details">@Book.Title</a></td>
+                    <td><img src="~/images/@Book.Image" style="object-fit: cover;" height="100"/></td>
+                    <td class="col-2"><a class="text-decoration-none text-dark">@Book.Author.Name @Book.Author.LastName</a></td>
+                    <td>@Book.Year</td>
+                    <td>@Book.Date</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
