--- a/LibraryApp/Views/Shared/_LoginPartial.cshtml
+++ b/LibraryApp/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     @if (User.IsInRole("Admin"))
     {
         <li class="nav-item">
-            <a id="manage" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Admin @UserManager.GetUserName(User)</a>
+            <a id="manage" class="nav-link text-white fw-bold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Admin @UserManager.GetUserName(User)</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -19,7 +19,7 @@
                 <li><a class="dropdown-item" asp-controller="User" asp-action="Index">Użytkownicy</a></li>
                 <li><a class="dropdown-item" asp-controller="Loan" asp-action="Index">Wypożyczone</a></li>
                 <li><a class="dropdown-item" asp-controller="Reservation" asp-action="Index">Rezerwacje</a></li>
-                <li><a class="dropdown-item" href="#">Ustawienia</a></li>
+                <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Ustawienia</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
                     <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -32,11 +32,11 @@
     else if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a id="user" class="nav-link text-white" title="User">@UserManager.GetUserName(User)</a>
+            <a id="user" class="nav-link text-white fw-bold" title="User">@UserManager.GetUserName(User)</a>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" asp-controller="Loan" asp-action="Index">Wypożyczone</a></li>
