--- a/LibraryApp/Views/Book/Create.cshtml
+++ b/LibraryApp/Views/Book/Create.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Dodaj książkę";
 }
 
-<partial name="Templates/_BackButton" model="@Url.Action("Index")"/>
+<partial name="Templates/_BackButton"/>
 
 <div class="col-sm-6 mx-auto">
     <partial name="Templates/_Alert" model="@ViewData["Alert"]?.ToString()"/>
@@ -24,6 +24,16 @@
                     }
                 </select>
             </div>
+            <script type="text/javascript">
+                $('#Author').select2({
+                   theme: "bootstrap-5",
+                   "language": {
+                       "noResults": function(){
+                           return "Nie znaleziono.";
+                       }
+                   },
+                });
+            </script>
         
             <div class="mb-3">
                 <label for="Description">Opis</label>
@@ -32,20 +42,58 @@
 
             <div class="mb-3">
                 <label for="File">Obraz</label>
-                <input id="File" name="File" type="file" class="form-control" onchange="preview();" minlength="3" maxlength="100" required>
+                <input id="File" name="File" type="file" class="form-control" onchange="preview(this);" accept="image/jpg,image/png,image/jpeg,image/gif" required>
                 <img id="ImagePreview" name="ImagePreview" height="0" class="ms-auto me-auto d-block"/>
             </div>
             <script>
-                function preview() {
-                    ImagePreview.src = URL.createObjectURL(event.target.files[0]);
-                    ImagePreview.height = 250;
-                    ImagePreview.style.marginTop='20px';
+                function preview(File) { 
+                    if (fileExtensionValidate(File)==false) {  
+                        alert("Nieprawidłowy format pliku!");
+                        
+                        ImagePreview.src = null;
+                        ImagePreview.height = 0;
+                        ImagePreview.style.marginTop='0px';
+                    } 
+                    else if (fileSizeValidate(File)==false){
+                        alert("Nieprawidłowy rozmiar pliku!");
+                        File.value = null;
+                        ImagePreview.src = null;
+                        ImagePreview.height = 0;
+                        ImagePreview.style.marginTop='0px';
+                    }
+                    else {
+                        ImagePreview.src = URL.createObjectURL(event.target.files[0]);
+                        ImagePreview.height = 250;
+                        ImagePreview.style.marginTop='20px';
+                    }   
+                }
+                var validExtension = ".png, .gif, .jpeg, .jpg";
+                function fileExtensionValidate(file) {
+	                var filePath = file.value;
+	                var getFileExtension = filePath.substring(filePath.lastIndexOf('.') + 1).toLowerCase();
+	                var pos = validExtension.indexOf(getFileExtension);
+	                if (pos < 0) {
+		                return false;
+	                } else {
+		                return true;
+	                }
+                }
+                var maxSize = '2048'; //2 MB
+                function fileSizeValidate(file) {
+	                if (file.files && file.files[0]) {
+		                var fileSize = file.files[0].size / 1024;
+		                if (fileSize > maxSize) {
+			                return false;
+		                } else {
+			                return true;
+		                }
+	                }
                 }
             </script>
 
             <div class="mb-3">
                 <label for="Year">Rok</label>
-                <input id="Year" name="Book.Year" type="number" class="form-control" minlength="3" maxlength="100" required>
+                <input id="Year" name="Book.Year" type="number" class="form-control" minlength="3" required>
             </div>
 
             <div class="mb-3">
