--- a/LibraryApp/Views/Shared/Templates/_AuthorList.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_AuthorList.cshtml
@@ -29,9 +29,9 @@
                     <td>@Author.Date</td>
                     <td class="text-end">
                         <a class="btn btn-success mb-1" asp-route-id="@Author.Id" asp-controller="Author" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
-                        <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal"><i class="bi bi-trash3-fill"></i></a>
+                        <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@Author.Id"><i class="bi bi-trash3-fill"></i></a>
                         <form asp-route-id="@Author.Id" asp-controller="Author" asp-action="Delete" method="post">
-                            <partial name="Templates/_ModalDelete"/>
+                            <partial name="Templates/_ModalDelete" model="@Author.Id"/>
                         </form>
                   </td>
                 </tr>
