--- a/LibraryApp/Views/Shared/Templates/_CopyList.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_CopyList.cshtml
@@ -34,9 +34,9 @@
                         @if (User.IsInRole("Admin")){
                             <a class="btn btn-success mb-1" asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
                             @if (Copy.Status == "1"){
-                                <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal"><i class="bi bi-trash3-fill"></i></a>
+                                <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@Copy.Id"><i class="bi bi-trash3-fill"></i></a>
                                 <form asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Delete" method="post">
-                                    <partial name="Templates/_ModalDelete"/>
+                                    <partial name="Templates/_ModalDelete" model="@Copy.Id"/>
                                 </form>
                             }
                         }
