--- a/LibraryApp/wwwroot/css/site.css
+++ b/LibraryApp/wwwroot/css/site.css
@@ -14,10 +14,15 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  /*margin-bottom: 60px;*/
 }
 
 
+
+.image {
+    width: 100%;
+    height: auto;
+}
 
 
 
