--- a/Biblioteczka/Views/Home/Index.cshtml
+++ b/Biblioteczka/Views/Home/Index.cshtml
@@ -8,12 +8,10 @@
     ViewData["Title"] = "Strona główna";
 }
 
-@if (!User.IsInRole("Admin")){
-    <div class="container">
-        <partial name="Templates/_IndexPage"/>
-    </div>
-}
-else {
-    <partial name="Templates/_IndexPage"/>
-}
+<h4>Ostatnio dodane</h4>
+<partial name="Templates/_BookSelectedDate"/>
+
+<h4>Najnowsze wydania</h4>
+<partial name="Templates/_BookSelectedYear"/>
+
 
