--- a/Biblioteczka/Views/Shared/Templates/_BookSelectedDate.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_BookSelectedDate.cshtml
@@ -1,11 +1,11 @@
-﻿<div class="row mb-md-4">
+﻿<div class="row mb-4">
     @for (int i=0; i< @Model.BooksDate.Count; i++)
     {
-        <div class="col-md-6 col-lg-2">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="card shadow-sm border-light mb-4">
                 <a class="text-decoration-none" asp-route-id="@Model.BooksDate[i].Id" asp-controller="Book" asp-action="Details">
                     <div class="position-relative">
-                        <img src="~/images/@Model.BooksDate[i].Image" style="object-fit: cover;" height="250" class="card-img-top" alt="image">
+                        <img src="~/images/@Model.BooksDate[i].Image" style="object-fit: cover;" class="card-img-top" alt="image">
                     </div>
 
                     <div class="card-body text-decoration-none text-dark">
