--- a/Biblioteczka/Views/Home/Index.cshtml
+++ b/Biblioteczka/Views/Home/Index.cshtml
@@ -9,9 +9,8 @@
 }
 
 <h4>Ostatnio dodane</h4>
-<partial name="Templates/_BookSelectedDate"/>
+<partial name="Templates/_BookSelected" model="@Model.BooksDate"/>
 
 <h4>Najnowsze wydania</h4>
-<partial name="Templates/_BookSelectedYear"/>
-
+<partial name="Templates/_BookSelected" model="@Model.BooksYear"/>
 
