--- a/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,36 +1,34 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+	ViewData["Title"] = "Register";
 }
 
-<div class="col-sm-6 mx-auto">
-    <div class="bg-white rounded shadow p-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h1>@ViewData["Title"]</h1>
-            <h4>Utwórz nowe konto.</h4>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="mb-3">
-                <label asp-for="Input.Email">Email</label>
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label asp-for="Input.Password">Hasło</label>
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />               
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label asp-for="Input.ConfirmPassword">Potwierdź hasło</label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />      
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary mb-4">Zarejestruj się</button>
-        </form>
-    </div>
+<div class="col-md-6 col-sm-10 col-12 mx-auto bg-white rounded shadow p-4">
+	<form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+		<h1>@ViewData["Title"]</h1>
+		<h4>Utwórz nowe konto.</h4>
+		<hr />
+		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+		<div class="mb-3">
+			<label asp-for="Input.Email">Email</label>
+			<input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+			<span asp-validation-for="Input.Email" class="text-danger"></span>
+		</div>
+		<div class="mb-3">
+			<label asp-for="Input.Password">Hasło</label>
+			<input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+			<span asp-validation-for="Input.Password" class="text-danger"></span>
+		</div>
+		<div class="mb-3">
+			<label asp-for="Input.ConfirmPassword">Potwierdź hasło</label>
+			<input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+			<span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+		</div>
+		<button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary mb-4">Zarejestruj się</button>
+	</form>
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+	<partial name="_ValidationScriptsPartial" />
 }
