--- a/Biblioteczka/Views/Author/Index.cshtml
+++ b/Biblioteczka/Views/Author/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Autorzy";
-    string path = "/Author";
 }
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
-<partial name="Templates/_SearchBar" model="@path"/>
+<partial name="Templates/_SearchBar" model="@Url.Action("Index")"/>
+
 <partial name="Templates/_AuthorList" model="@Model"/>
 <partial name="Templates/_Pagination" model="@Model"/>
