--- a/Biblioteczka/Views/Book/Details.cshtml
+++ b/Biblioteczka/Views/Book/Details.cshtml
@@ -12,7 +12,7 @@
 <partial name="Templates/_BackButton"/>
 
 @if (User.IsInRole("Admin")){
-    <a class="btn btn-success mb-1 me-4 position-absolute end-0" asp-route-id="@Model.Book.Id" asp-controller="Book" asp-action="Edit"><i class="bi bi-pencil-square">  Edytuj</i></a>
+    <a class="btn btn-success mb-1 me-4 position-absolute end-0" asp-route-id="@Model.Book.Id" asp-controller="Book" asp-action="Edit"><i class="bi bi-pencil-square"><label class="ms-2">Edytuj</label></i></a>
 }
 
 <div class="col-sm-6 mx-auto bg-white rounded shadow d-flex">
