--- a/Biblioteczka/Views/Shared/Templates/_BookList.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_BookList.cshtml
@@ -3,17 +3,17 @@
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Tytuł&nbsp;&nbsp;
+                <th scope="col"><label class="me-2">Tytuł</label>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleAsc"})"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleDesc"})"><i class="bi bi-arrow-down"></i></a>
                 </th>
                 <th scope="col">Zdjęcie</th>
                 <th scope="col">Autor</th>
-                <th scope="col">Rok wydania&nbsp;&nbsp;
+                <th scope="col"><label class="me-2">Rok wydania</label>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearAsc"})"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearDesc"})"><i class="bi bi-arrow-down"></i></a>
                 </th>
-                <th scope="col">Datadodania &nbsp;&nbsp;
+                <th scope="col"><label class="me-2">Data dodania</label>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateAsc"})"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateDesc"})"><i class="bi bi-arrow-down"></i></a>
                 </th>  
@@ -21,15 +21,15 @@
         </thead>
 
         <tbody>
-            @foreach (var Book in @Model.BookList)
+            @foreach (var List in @Model.BookList)
             {
                 <tr>
-                    <th scope="row">@Book.Id</th>
-                    <td class="col-3"><a class="text-decoration-none text-dark" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details">@Book.Title</a></td>
-                    <td><img src="~/images/@Book.Image" style="object-fit: cover;" height="100"/></td>
-                    <td class="col-2"><a class="text-decoration-none text-dark">@Book.Author.Name @Book.Author.LastName</a></td>
-                    <td>@Book.Year</td>
-                    <td>@Book.Date</td>
+                    <th scope="row">@List.Book.Id</th>
+                    <td class="col-3"><a class="text-decoration-none text-dark" asp-route-id="@List.Book.Id" asp-controller="Book" asp-action="Details">@List.Book.Title</a></td>
+                    <td><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
+                    <td class="col-2"><a class="text-decoration-none text-dark" asp-route-id="@List.Book.AuthorId" asp-controller="Author" asp-action="Details">@List.Book.Author.Name @List.Book.Author.LastName</a></td>
+                    <td>@List.Book.Year</td>
+                    <td>@List.Book.Date</td>
                 </tr>
             }
         </tbody>
