--- a/Biblioteczka/Views/Shared/Templates/_BookListAdmin.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_BookListAdmin.cshtml
@@ -3,17 +3,20 @@
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Tytuł&nbsp;&nbsp;
+                <th scope="col"><label class="me-2">Tytuł</label>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleAsc"})"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleDesc"})"><i class="bi bi-arrow-down"></i></a>
                 </th>
                 <th scope="col">Zdjęcie</th>
-                <th scope="col">Autor</th>
-                <th scope="col">Rok wydania&nbsp;&nbsp;
+                <th scope="col"><label class="me-2">Autor</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "LastNameAsc"})"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "LastNameDesc"})"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Rok wydania</label>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearAsc"})"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearDesc"})"><i class="bi bi-arrow-down"></i></a>
                 </th>
-                <th scope="col">Data&nbsp;&nbsp;
+                <th scope="col"><label class="me-2">Data dodania</label>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateAsc"})"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateDesc"})"><i class="bi bi-arrow-down"></i></a>
                 </th>
@@ -22,20 +25,20 @@
         </thead>
 
         <tbody>
-            @foreach (var Book in @Model.BookList)
+            @foreach (var List in @Model.BookList)
             {
                 <tr>
-                    <th scope="row">@Book.Id</th>
-                    <td class="col-3"><a class="text-decoration-none text-dark" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details">@Book.Title</a></td>
-                    <td><img src="~/images/@Book.Image" style="object-fit: cover;" height="100"/></td>
-                    <td class="col-2"><a class="text-decoration-none text-dark">@Book.Author.Name @Book.Author.LastName</a></td>
-                    <td>@Book.Year</td>
-                    <td>@Book.Date</td>
+                    <th scope="row">@List.Book.Id</th>
+                    <td class="col-3"><a class="text-decoration-none text-dark" asp-route-id="@List.Book.Id" asp-controller="Book" asp-action="Details">@List.Book.Title</a></td>
+                    <td><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
+                    <td class="col-2"><a class="text-decoration-none text-dark" asp-route-id="@List.Book.AuthorId" asp-controller="Author" asp-action="Details">@List.Author.Name @List.Author.LastName</a></td>
+                    <td>@List.Book.Year</td>
+                    <td>@List.Book.Date.ToString("dd/MM/yyyy HH:mm")</td>
                     <td class="text-end">
-                        <a class="btn btn-success mb-1" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
-                        <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@Book.Id"><i class="bi bi-trash3-fill"></i></a>
-                        <form asp-route-id="@Book.Id" asp-controller="Book" asp-action="Delete" method="post">
-                            <partial name="Templates/_ModalDelete" model="@Book.Id"/>
+                        <a class="btn btn-success mb-1" asp-route-id="@List.Book.Id" asp-controller="Book" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
+                        <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@List.Book.Id"><i class="bi bi-trash3-fill"></i></a>
+                        <form asp-route-id="@List.Book.Id" asp-controller="Book" asp-action="Delete" method="post">
+                            <partial name="Templates/_ModalDelete" model="@List.Book.Id"/>
                         </form>
                     </td>
                 </tr>
