--- a/Biblioteczka/wwwroot/css/site.css
+++ b/Biblioteczka/wwwroot/css/site.css
@@ -36,10 +36,16 @@ a.sidebar-item.active {
 }
 #page-title {
     background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
     visibility: visible;
-    padding: 6px;
+    padding: 6px 6px 6px 10px;
 }
+#nav-dropdown {
+    border-width: 2px;
+    border-radius: 0rem;
+}
+
+
 
 
 /* Sidebar */
@@ -70,7 +76,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
     margin-left: 0;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1200px) {
     #sidebar-wrapper {
         margin-left: 0;
     }
@@ -135,4 +141,15 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 
 .dropdown-item.active, .dropdown-item:active {
     background-color: #F2545B;
+}
+
+.navbar-toggler {
+    padding: 0;
+}
+.navbar-light .navbar-toggler {
+    color: white;
+    border-color: transparent;
+}
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
